--- a/first/src/index.html
+++ b/first/src/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+  <template id="duke">
+    <div>hey duke from template</div>
+  </template>
   <div>from body</div>
   <script src="component.js"></script>
 </body>
