--- a/first/src/index.html
+++ b/first/src/index.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-  <template id="duke">
-    <div>hey duke from template</div>
-  </template>
-  <div>from body</div>
+  <duke>hey duke</duke>
+  <a-duke>another duke</a-duke>
   <script src="component.js"></script>
 </body>
 </html>
