--- a/first/src/index.html
+++ b/first/src/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <a-duke>another duke</a-duke>
+  <button id="register">register</button>
+  <button id="remove">remove</button>
+  <a-duke>loading...</a-duke>
   <script src="component.js"></script>
 </body>
 </html>
