global template definition

--- a/first/src/index.html
+++ b/first/src/index.html
@@ -10,5 +10,6 @@
 <body>
   <a-duke>loading...</a-duke>
   <script src="component.js"></script>
+  <script src="another.js"></script>
 </body>
 </html>
