template creation moved into a static function

--- a/first/src/index.html
+++ b/first/src/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <a-duke>loading...</a-duke>
+  <a-duke>loading 1...</a-duke>
+  <a-duke>loading 2...</a-duke>
+  <a-duke>loading 3...</a-duke>
   <script src="component.js"></script>
   <script src="another.js"></script>
 </body>
