--- a/first/src/index.html
+++ b/first/src/index.html
@@ -11,7 +11,6 @@
   <a-duke>loading 1...</a-duke>
   <a-duke>loading 2...</a-duke>
   <a-duke>loading 3...</a-duke>
-  <script src="component.js"></script>
-  <script src="another.js"></script>
+  <script src="component.js" type="module"></script>
 </body>
 </html>
