template refactored into a dedicated class

--- a/first/src/index.html
+++ b/first/src/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <p>I'm not a component</p>
   <a-duke>loading 1...</a-duke>
   <a-duke>loading 2...</a-duke>
   <a-duke>loading 3...</a-duke>
