the slot element

--- a/first/src/index.html
+++ b/first/src/index.html
@@ -9,7 +9,11 @@
 
 <body>
   <p>I'm not a component</p>
-  <a-duke>loading 1...</a-duke>
+  <a-duke>
+    <p>
+    interesting 1...
+  </p>
+  </a-duke>
   <a-duke>loading 2...</a-duke>
   <a-duke>loading 3...</a-duke>
   <script src="component.js" type="module"></script>
