--- a/first/src/index.html
+++ b/first/src/index.html
@@ -10,12 +10,14 @@
 <body>
   <p>I'm not a component</p>
   <a-duke>
-    <p>
+    <p slot="title">
     interesting 1...
   </p>
+  <div slot="footer">
+    <p>The End</p>
+  </div>
   </a-duke>
-  <a-duke>loading 2...</a-duke>
-  <a-duke>loading 3...</a-duke>
+  <a-duke>vanilla</a-duke>
   <script src="component.js" type="module"></script>
 </body>
 </html>
