the slotted selector

--- a/first/src/index.html
+++ b/first/src/index.html
@@ -13,9 +13,7 @@
     <p slot="title">
     interesting 1...
   </p>
-  <div slot="footer">
-    <p>The End</p>
-  </div>
+    <p slot="footer">The End</p>
   </a-duke>
   <a-duke>vanilla</a-duke>
   <script src="component.js" type="module"></script>
