host selector and pseudo classes

--- a/first/src/index.html
+++ b/first/src/index.html
@@ -15,7 +15,7 @@
   </p>
     <p slot="footer">The End</p>
   </a-duke>
-  <a-duke>vanilla</a-duke>
+  <a-duke disabled>vanilla</a-duke>
   <script src="component.js" type="module"></script>
 </body>
 </html>
