passing data to components as attributes

--- a/first/src/index.html
+++ b/first/src/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <p>I'm not a component</p>
-  <a-duke>
+  <a-duke message="welcome">
     <p slot="title">
     interesting 1...
   </p>
